# flickr-uploader

./: README.md  authenticate_flickr.py  get_flickr_token.py  pyproject.toml  requirements.txt  uploadr.ini  uploadr.py
