[project]
name = "flickr-uploader"
version = "1.0.0"
description = "Upload a directory of media to Flickr to use as a backup to your local storage"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "flickrapi>=2.4.0",
]

[project.optional-dependencies]
dev = [
    "portalocker>=2.0.0",
]
